--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,4 +1,4 @@
-$orange_main: #ff5722;
+$orange_main: #08bf73;
 
 #id_top_products {
   height: 300px;
@@ -391,6 +391,7 @@ $orange_main: #ff5722;
 
 .height-50 {
   height: 50px;
+  color: green;
 }
 
 .padding-102 {
@@ -429,8 +430,8 @@ $orange_main: #ff5722;
 }
 
 .defaut-cover-size {
-  width: 508px !important;
-  height: 220px !important;
+  width: 100%;
+  height: 250px !important;
 }
 
 .defaut-position {
