--- a/app/views/admin/mini_pitches/index.html.erb
+++ b/app/views/admin/mini_pitches/index.html.erb
@@ -1,16 +1,16 @@
-<% provide :title, t("common.all_products") %>
+<% provide :title, t(".all_mini_pitches") %>
 <div class="row">
   <div class="col-md-12">
     <div class="panel panel-success">
       <table class="table table-striped table-hover table-bordered">
         <thead class="">
           <tr>
-            <th><%= t "common.number" %></th>
-            <th><%= t "dashboard.shops.products.name" %></th>
-            <th><%= t "dashboard.shops.products.image" %></th>
-            <th><%= t "description" %></th>
-            <th><%= t "dashboard.shops.products.price" %></th>
-            <th><%= t "dashboard.shops.new.shop" %></th>
+            <th><%= t ".number" %></th>
+            <th><%= t ".name" %></th>
+            <th><%= t ".image" %></th>
+            <th><%= t ".description" %></th>
+            <th><%= t ".price" %></th>
+            <th><%= t ".pitch" %></th>
           </tr>
         </thead>
         <tbody>
