--- a/app/views/dashboard/pitches/index.html.erb
+++ b/app/views/dashboard/pitches/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <h2 class="row_h2">
-    <%= t "your_shop" %>
+    <%= t ".your_pitch" %>
     <div class="btn_view_all_wrapper pull-right">
-      <%= link_to t("common.btn_request"), new_dashboard_pitch_path,
+      <%= link_to t(".btn_request"), new_dashboard_pitch_path,
         class: "btn btn_view_all btn-warning" %>
     </div>
   </h2>
