--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
   <h2 class="section_title">
-    <%= t "common.all_shops" %>
+    <%= t ".all_pitches" %>
   </h2>
 </div>
 <div class="col-md-12 magin_top_10px" id="id_shops_list">
-  <%= render @shops %>
+  <%= render @pitches %>
 </div>
-<%= paginate @shops %>
+<%= paginate @pitches %>
