--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -1,4 +1,4 @@
-$orange_main: #ff5722;
+$orange_main: #08bf73;
 
 #id_top_products {
   height: 300px;
@@ -162,8 +162,8 @@ $orange_main: #ff5722;
 }
 
 .item-produc-shop {
-  width: 24%;
-  margin-right: 10px;
+  width: 25%;
+  
   display: inline-block;
   box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
 }
@@ -458,8 +458,8 @@ a {
 }
 
 .style_coffee {
-  width: 104%;
-  margin-left: -25px;
+  width: 100%;
+  margin-left: 0px;
 }
 
 .margin_left_shop {
