--- a/app/views/dashboard/mini_pitches/_mini_pitch.html.erb
+++ b/app/views/dashboard/mini_pitches/_mini_pitch.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= link_to "mini_pitch_path" do %>
+    <%= link_to mini_pitch_path(mini_pitch) do %>
       <div class="shop-product-image">
         <%= image_tag mini_pitch.image.url %>
       </div><br>
@@ -19,15 +19,15 @@
       <%= mini_pitch.description %>
     </div>
   </td>
-  <td><%= mini_pitch.price %></td>
+  <td><%= format_price mini_pitch.price %></td>
   <td><%= t "all_status.#{mini_pitch.status}" %></td>
   <td>
-    <%= link_to t("common.edit_button"),
+    <%= link_to t(".edit_button"),
       edit_dashboard_pitch_mini_pitch_path(mini_pitch.pitch, mini_pitch),
       class: "btn btn-sm btn-primary" %>
-    <%= link_to t("common.delete_button"),
+    <%= link_to t(".delete_button"),
       dashboard_pitch_mini_pitch_path(mini_pitch.pitch, mini_pitch),
-      method: :delete, data: {confirm: t("common.delete_confirm")},
+      method: :delete, data: {confirm: t(".delete_confirm")},
       class: "btn btn-sm btn-danger" %>
   </td>
 </tr>
