--- a/app/views/dashboard/pitches/_form.html.erb
+++ b/app/views/dashboard/pitches/_form.html.erb
@@ -1,32 +1,45 @@
+<%= javascript_include_tag "map" %>
 <%= simple_form_for [:dashboard, @pitch] do |f| %>
+
   <%= render "shared/error_messages", object: @pitch %>
+
   <div class="form-group">
-    <%= f.label t "request_shop.shop_name" %>
-    <%= f.text_field :name, placeholder: t(".shop_name"),
-      error: t(".shop_name_error") , class: "form-control" %>
+    <%= f.label t ".name" %>
+    <%= f.text_field :name, placeholder: t(".name"),
+      class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label t "description" %>
-    <%= f.text_area :description, placeholder: t(".shop_description"),
-      error: t(".shop_description_error"), class: "form-control" %>
+    <%= f.label t ".description" %>
+    <%= f.text_area :description, placeholder: t(".description"),
+      class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label t "time_auto_reject_order" %>
+    <%= f.label t ".time_auto_reject" %>
     <%= f.time_select :time_auto_reject, minute_step: Settings.minute_step %>
   </div>
   <div class="form-group">
-    <%= f.label t "owners_shop_avatar" %>
+    <%= f.label t ".pitch_avatar" %>
     <%= image_tag @pitch.avatar.url, class: "avatar padding_top_10px defaut-size" %>
     <%= f.file_field :avatar, accept: Settings.pictures.accepted_files,
       class: "upload_img" %>
   </div>
   <div class="form-group">
-    <%= f.label t "owners_shop_cover_image" %>
+    <%= f.label t ".pitch_cover_image" %>
     <%= image_tag @pitch.cover_image.url, class: "avatar_cover padding_top_10px defaut-cover-size" %>
     <%= f.file_field :cover_image, accept: Settings.pictures.accepted_files,
       class: "upload_img_cover" %>
   </div>
-  <%= link_to t("common.back_button"), :back, class: "btn btn-warning" %>
+  
+  <div class="form-group">
+    <%= f.simple_fields_for :address do |form_address| %>
+      <%= form_address.input :details, label: t(".address"),
+        input_html: {class: "form-control margin-bot-15", id: "address"} %>
+    <% end %>
+    <div id="gmap-canvas" class="gmap">   
+    </div>
+  </div>
+  
+  <%= link_to t(".back_button"), :back, class: "btn btn-warning" %>
   <%= f.submit yield(:submit_button),
     class: "btn btn-primary space-top-submit" %>
 <% end %>
