--- a/app/views/dashboard/pitches/_mini_pitches.html.erb
+++ b/app/views/dashboard/pitches/_mini_pitches.html.erb
@@ -6,18 +6,18 @@
           <div class="container">
             <div class="panel panel-default edit-form">
               <div class="panel-heading">
-                <h4><strong><%= t "dashboard.shops.show.edit_all_time" %></strong></h4>
+                <h4><strong><%= t ".edit_all_time" %></strong></h4>
               </div>
               <div class="panel-body">
-                <%= label_tag t("dashboard.shops.show.start_time") %>
+                <%= label_tag t(".start_time") %>
                 <%= time_field_tag :start_hour, "", 
                   minute_step: Settings.minute_step,
                   required: :true, class: "edit-time" %>
-                <%= label_tag t("dashboard.shops.show.end_time") %>
+                <%= label_tag t(".end_time") %>
                 <%= time_field_tag :end_hour, "", 
                   minute_step: Settings.minute_step, 
                   required: :true, class: "edit-time" %>
-                <%= submit_tag t("dashboard.shops.show.update_all"),
+                <%= submit_tag t(".update_all"),
                   class: "btn btn-primary space-top-submit btn-update" %>
               </div>
             </div>
@@ -27,7 +27,7 @@
       <tr>
         <th><%= t ".image" %></th>
         <th><%= t ".name" %></th>
-        <th><%= t "description" %></th>
+        <th><%= t ".description" %></th>
         <th><%= t ".price" %></th>
         <th><%= t ".status" %></th>
         <th><%= t ".actions" %></th>
