--- a/app/views/dashboard/pitches/_pitch.html.erb
+++ b/app/views/dashboard/pitches/_pitch.html.erb
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="row margin-top-50">
-    <div class="col-lg-12">
+    <div class="col-md-12">  
     </div>
   </div>
 </div>
