--- a/app/views/dashboard/pitches/edit.html.erb
+++ b/app/views/dashboard/pitches/edit.html.erb
@@ -1,10 +1,10 @@
 <% provide :title, t(".title") %>
-<% provide :submit_button, t("common.save_button") %>
+<% provide :submit_button, t(".save_button") %>
 <h1 class="title text-center"><%= t ".title" %></h1>
 <div class="col-md-6 col-md-offset-3">
   <div class="panel panel-success">
     <div class="panel-heading text-center">
-      <%= t ".shop" %>
+      <%= t ".pitch" %>
     </div>
     <div class="panel-body">
       <%= render "form" %>
