--- a/app/views/dashboard/pitches/new.html.erb
+++ b/app/views/dashboard/pitches/new.html.erb
@@ -1,13 +1,14 @@
+<%= javascript_include_tag "map" %>
 <% provide :title, t(".title") %>
-<% provide :submit_button, t("common.create_button") %>
+<% provide :submit_button, t(".create_button") %>
 <h1 class="title text-center"><%= t ".title" %></h1>
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-8 col-md-offset-2">
   <div class="panel panel-success">
     <div class="panel-heading text-center">
-      <%= t ".shop" %>
+      <%= t ".pitch" %>
     </div>
-    <div class="panel-body">
+    <div class="panel-body pitch-form">
       <%= render "form" %>
     </div>
   </div>
-</div>
+</div> 
