--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,36 +20,7 @@
       </div>
       <%= yield %>
     </div>
-    <div class="row margin-to co-black">
-      <div class="col-sm-4 text-default padding-duong">
-        <h1 class="com-name"><strong><%= t("company") %></strong></h1>
-        <h5>
-          <strong class="text-default">
-            <%= link_to t("home"), root_path %><br>
-            <%= link_to t("document"), pdf_readers_path, target: "_blank" %>
-          </strong>
-        </h5>
-        <h5 class="text-default"><%= t "com-infor" %></h5>
-      </div>
-      <div class="col-sm-4 padding-duong text-default">
-        <i class="fa fa-map-marker fa-2x default-icon address-icon"></i>
-        <%= t "com-add" %>
-        </br>
-        <i class="fa fa-mobile fa-2x default-icon"></i>
-        <%= t "phone-num" %>
-        </br>
-        <i class="fa fa-envelope default-icon text-default" aria-hidden="true">
-        </i>
-        <%= mail_to t "com-email" %>
-      </div>
-      <div class="col-sm-4 padding-duong text-default">
-        <%= t "about_label" %>
-        <%= t "com-detail" %>
-        </br>
-        <%= link_to t("feed_back"), Settings.feedback, target: "_blank",
-          class: "text-default" %>
-      </div>
-    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7-ht9HI1-6uL2zI8D6GZYc98lZ2MVbeQ&&libraries=places"></script>
   </body>
   <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.js"></script>
 </html>
