--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,22 +1,22 @@
 <% if @items.blank? %>
   <div class="row">
     <h2 class="section_title">
-      <%= t "livesearch.no_result", name: params[:search] %>
+      <%= t ".no_result", name: params[:search] %>
     </h2>
   </div>
 <% else %>
   <div class="row">
     <h2 class="section_title">
-      <%= t "livesearch.see_more", num: @items.size,
-        name: params[:search] ||= t("livesearch.search_all") %>
+      <%= t ".see_more", num: @items.size,
+        name: params[:search] ||= t(".search_all") %>
     </h2>
   </div>
   <div class="container">
     <% @items.each do |item| %>
-      <% if item.is_a? Product %>
-        <%= render "products/search_item", product: item %>
-      <% elsif item.is_a? Shop %>
-        <%= render "shops/search_item", shop: item %>
+      <% if item.is_a? MiniPitch %>
+        <%= render "mini_pitches/search_item", mini_pitch: item %>
+      <% elsif item.is_a? Pitch %>
+        <%= render "pitches/search_item", pitch: item %>
       <% end %>
     <% end %>
   </div>
