--- a/app/views/shared/_live_search.html.erb
+++ b/app/views/shared/_live_search.html.erb
@@ -8,10 +8,10 @@
 <% else %>
   <div class="scrollable-menu width400">
     <% items.each do |item| %>
-      <% if item.is_a? Product %>
-        <%= render "products/live_search_item", product: item %>
-      <% elsif item.is_a? Shop %>
-        <%= render "shops/live_search_item", shop: item %>
+      <% if item.is_a? MiniPitch %>
+        <%= render "mini_pitches/live_search_item", mini_pitch: item %>
+      <% elsif item.is_a? Pitch %>
+        <%= render "pitches/live_search_item", pitch: item %>
       <% end %>
     <% end %>
   </div>
