--- a/app/views/shared/_pitch_status_label.html.erb
+++ b/app/views/shared/_pitch_status_label.html.erb
@@ -1,3 +1,3 @@
 <% if pitch.pending? %>
-  <strong><span class="shop_not_activate"><%= t "shop_not_activate" %></span></strong>
+  <strong><span class="shop_not_activate"><%= t ".pitch_not_activate" %></span></strong>
 <% end %>
