check mini pitch

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -142,3 +142,16 @@
 .show-pitch-type {
   padding-left: 20px;
 }
+
+.form-check-mini-pitch {
+  padding-top: 20px;
+  padding-bottom: 75px;
+
+  .check-mini-pitch {
+    padding-top: 25px;
+  }
+}
+
+.form-check-result {
+  
+}
