--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -35,8 +35,8 @@
         </div>
 
         <div class="field">
-          <%= f.label :chatwork_id %>
-          <%= f.text_field :chatwork_id, class: "form-control" %>
+          <%= f.label :phone %>
+          <%= f.text_field :phone, class: "form-control" %>
         </div>
 
         <div class="field">
