--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
  *= require_self
  *= require social-share-button
  *= require growl
+ *= require bootstrap-social
  */
 
 @import 'bootstrap/glyphicons';
