--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to t(".log_in"), new_session_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to t(".sign_up"), new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <%= link_to t(".forgot_pasword"), new_password_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -19,11 +19,8 @@
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
-  <strong class="login">Login via </strong>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-      <%= link_to omniauth_authorize_path(resource_name, provider) do %>
-        <%= button_tag t "#{provider}", class: "btn_social #{provider}" %>
-      <% end %>
-  <% end -%>
-
+  <strong class="login"><%= t ".login_via" %></strong>
+  <%= link_to t(".facebook"),
+    omniauth_authorize_path(resource_name, :facebook),
+    class: "btn-facebook" %>
 <% end -%>
