--- a/app/views/dashboard/mini_pitches/_form.html.erb
+++ b/app/views/dashboard/mini_pitches/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.number_field :price, placeholder: t(".price"),
       class: "form-control" %>
   </div>
+  
+  <div class="form-group">
+    <%= f.label t ".type" %>
+    <%= f.select :pitch_type, options_for_select([5,7,11 ], 5) %>
+  </div>
+
   <div class="form-group">
     <%= f.label t ".start_hour" %>
     <%= f.time_select :start_hour,  minute_step: 5 %>
@@ -22,8 +28,9 @@
     <%= f.time_select :end_hour,  minute_step: 5 %>
   </div>
   <div class="form-group">
-    <%= f.input :status, collection: MiniPitch.statuses.keys, selected: :active,
-      label_html: {class: "padding-right-for-button"} %>
+    <%= f.label t ".status" %>
+    <%= f.select :status,
+      options_for_select(MiniPitch.statuses.keys, :active) %>
   </div>
   <div class="form-group">
     <%= f.label t ".image" %>
