--- a/app/views/dashboard/pitches/show.html.erb
+++ b/app/views/dashboard/pitches/show.html.erb
@@ -37,6 +37,9 @@
               <%= link_to t(".view_history_rent"),
                 dashboard_pitch_rent_managers_path(@pitch.id),
                 class: "btn btn-theme" %>
+              <%= link_to t(".promotion"),
+                dashboard_pitch_promotions_path(@pitch.id),
+                class: "btn btn-theme" %>
             </h4>
           </div>
         </div>
