--- a/app/views/search_mini_pitches/index.js.erb
+++ b/app/views/search_mini_pitches/index.js.erb
@@ -1,5 +1,6 @@
 <% if @status.present? %>
-  $.growl.error({message: '<%= @message %>'});
+  $.growl.error({title: I18n.t("growl.title.error"),
+  	message: '<%= @message %>'});
 <% else %>
   $('.pitch-mini-pitch').html('<%= j render "available_mini_pitches", mini_pitches: @free_pitches %>');
   $('.pitch-mini-has-match').html('<%= j render "mini_pitch_has_match", matches: @matches %>');
