--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,7 +36,7 @@
 
         <div class="field">
           <%= f.label :phone %>
-          <%= f.text_field :phone, class: "form-control" %>
+          <%= f.telephone_field :phone, class: "form-control" %>
         </div>
 
         <div class="field">
