--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -37,6 +37,10 @@
           <%= f.label t "edit_user.name" %>
           <%= f.text_field :name, class: "form-control" %>
         </div>
+        <div class="field">
+          <%= f.label :phone %>
+          <%= f.telephone_field :phone, class: "form-control" %>
+        </div>
         <div class="form-group">
           <%= f.label t "edit_user.description" %>
           <%= f.text_area :description, class: "form-control" %>
