--- a/app/views/dashboard/mini_pitches/_mini_pitch.html.erb
+++ b/app/views/dashboard/mini_pitches/_mini_pitch.html.erb
@@ -5,9 +5,9 @@
         <%= image_tag mini_pitch.image.url %>
       </div><br>
       <h5 class="time-output"><strong>
-        <%= t "cart.order_time_text" %>
+        <%= t ".time_text" %>
         <%= l mini_pitch.start_hour, format: :short_time %>
-        <%= t "split" %>
+        <%= t ".split" %>
         <%= l mini_pitch.end_hour, format: :short_time %>
       </strong></h5>
     <% end %>
