--- a/app/views/dashboard/rent_managers/_rent.html.erb
+++ b/app/views/dashboard/rent_managers/_rent.html.erb
@@ -34,7 +34,7 @@
           </div>
           <div class="col-md-4 col-xs-4 text-center rent-info">
             <div><b><%= rent.user.name %></b></div>
-            <span><i><%= rent.user.phone %></i></span>
+            <span><i><%= rent.phone %></i></span>
           </div>
           <div class="col-md-3 col-xs-3 rent-info">
             <div>
