--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -74,7 +74,7 @@
               </div>
               <li class="divider"></li>
               <li>
-                <%= link_to t("cart.view_cart_all"),events_path ,
+                <%= link_to t(".view_all"),events_path ,
                   class: "text-center hightline" %>
               </li>
             </ul>
