--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,13 +1,13 @@
 $orange_main: #08bf73;
 
-#id_top_products {
-  height: 300px;
+#id_top_productss {
+  height: 500px;
 
   .carousel-inner {
-    height: 300px;
+    height: 500px;
 
     .item {
-      height: 300px;
+      height: 500px;
     }
 
     .carousel-caption {
@@ -423,6 +423,11 @@ $orange_main: #08bf73;
 .defaut-pic-cover {
   width: 100% !important;
   height: 420px !important;
+}
+
+.defaut-pic-covers {
+  width: 100% !important;
+  height: 500px !important;
 }
 
 .width-1140 {
